subnav spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,16 @@
   height: 500px;
   width: 100%;
 }
+.home{
+  height: 400px;
+}
 .SubNav{
   border: solid whitesmoke;
   background-color: whitesmoke;
   border-width: 0.3em;
   height: 60px;
   width: 100%;
-  margin-top: 150px;
+  margin-top: 10px; 
 }
 .icons{
   display: flex;
@@ -35,6 +38,7 @@
 }
 .gallery {
   border: solid whitesmoke;
+  border-width: 0.9em;
   display: flex;
   justify-content: space-evenly;
   height: 490px;
@@ -42,10 +46,13 @@
 }
 .galleryHead {
   display: flex;
+  justify-content: center;
   color: black;
   font-family: Bodoni Moda;
+  width: 300px;
+  padding-top: 90px;
+  height: 250px;
   font-size: 30px;
-  margin-top: 100px;
   text-shadow:
     1px 1px 2px white,
     0 0 1em white,
@@ -204,7 +211,9 @@ a {
 .AboutMe{
   background-color: whitesmoke;
   display: flex;
-  margin-top: 70px;
+  margin-top: 200px;
+  border: solid whitesmoke;
+  border-width: 0.9em;
 }
 .left{
   width: 50%;
@@ -215,7 +224,6 @@ a {
 }
 .sarahPic{
   height: 300px;
-  border: solid yellow;
 }
 .sarah{
   font-family: Bodoni Moda;
@@ -267,11 +275,11 @@ a {
 .gallery {
   height: 100%;
   width: 100%;
-  margin-top: 50px;
   border: solid white;
   border-width: 0.5em;
   display: flex;
   justify-content: space-around;
+  margin-top: 50px;
 }
 .galleryHead {
   display: none;
